feat(api): dump profile data through http request (#446)
* feat: add common-pprof to dump perf data to a temp file

* feat(api): directly implement dump_profile in api

* chore(api): expose dump_profile feature

* change(api): expose dump_profile through configuration file

--- a/core/api/Cargo.toml
+++ b/core/api/Cargo.toml
@@ -26,3 +26,6 @@ lazy_static = "1.4"
 num_cpus = "1.12"
 log = "0.4"
 openssl = "0.10"
+pprof = { version = "0.3", features = ["flamegraph", "protobuf"] }
+url = { version = "2.1" }
+tokio = { version = "0.2", features = [ "time" ] }
