--- a/core/storage/Cargo.toml
+++ b/core/storage/Cargo.toml
@@ -17,7 +17,8 @@ lazy_static = "1.4"
 parking_lot = "0.11"
 async-trait = "0.1"
 rocksdb = "0.14"
-tokio = { version = "0.2", features = [ "sync" ] }
+tokio = "0.2"
+arc-swap = "0.4"
 
 [dev-dependencies]
 num-traits = "0.2"
