--- a/core/cli/src/tests/config.toml
+++ b/core/cli/src/tests/config.toml
@@ -41,7 +41,7 @@ triedb_cache_size = 2000
 filter = "info"
 log_to_console = true
 console_show_file_and_line = false
-log_path = "logs/"
+log_path = "./free-space/logs"
 log_to_file = true
 file_size_limit = 1073741824 # 1 GiB
 metrics = true
