fix: remove unused var and set default config and genesis fix: add -y to prompt to confirm

--- a/core/run/Cargo.toml
+++ b/core/run/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "run"
-version = "0.1.0"
+version = "0.2.0-rc.2.1"
 authors = ["LycrusHamster <liang2929@hotmail.com>"]
 edition = "2018"
 
