build: change author

--- a/core/run/Cargo.toml
+++ b/core/run/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "run"
 version = "0.2.0-rc.2.1"
-authors = ["LycrusHamster <liang2929@hotmail.com>"]
+authors = ["Muta Dev <muta@nervos.org>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
