build: build muta v0.2.0

--- a/byzantine/Cargo.toml
+++ b/byzantine/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "byzantine"
-version = "0.0.1-alpha.0"
+version = "0.2.0"
 authors = ["Muta Dev <muta@nervos.org>"]
 edition = "2018"
 repository = "https://github.com/nervosnetwork/muta"
