--- a/core/mempool/Cargo.toml
+++ b/core/mempool/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "core-mempool"
-version = "0.2.0-rc.2.1"
+version = "0.2.0"
 authors = ["Muta Dev <muta@nervos.org>"]
 edition = "2018"
 repository = "https://github.com/nervosnetwork/muta"
