--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -31,6 +31,8 @@ ophelia = "0.3"
 ophelia-secp256k1 = "0.3"
 bech32 = "0.7"
 arc-swap = "0.4"
+smol_str = "0.1"
+log = "0.4"
 
 [dev-dependencies]
 rayon = "1.3"
